--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,8 +1,15 @@
-@mixin profileInfo() {
+@mixin profile__info() {
   background-position: center;
   background-size: cover;
   border-radius: 50%;
   box-shadow: 0 0 30px 0 rgba($color: #000000, $alpha: 0.4);
-  height: 28vh;
-  width: 70%;
+  height: 300px;
+  width: 300px;
+}
+
+@mixin arrow() {
+  font-size: 1.5rem;
+  width: 37px;
+  border-radius: 50%;
+  padding: 5px;
 }
