--- a/scss/_startpage.scss
+++ b/scss/_startpage.scss
@@ -57,16 +57,18 @@ header {
 .arrow__container {
   text-align: center;
 
-  #arrow--down {
-    background-color: white;
+  #arrow--white {
+    @include m.arrow;
+    background-color: v.$primary-color;
     color: black;
-    font-size: 1.5rem;
-    font-weight: bold;
-
-    padding: 5px;
     margin-bottom: 30px;
-    border-radius: 50%;
-    width: 37px;
+  }
+
+  #arrow--black {
+    @include m.arrow;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    margin-top: 20px;
   }
 }
 
@@ -91,22 +93,22 @@ main {
 .main__pic--rakib {
   //gör media query
   background-image: url(../assets/profiles/Rakib_Square.png);
-  @include m.profileInfo();
+  @include m.profile__info();
 }
 
 .main__pic--alexandra {
   background-image: url(../assets/profiles/Alexandra_Square.png);
-  @include m.profileInfo();
+  @include m.profile__info();
 }
 
 .main__pic--lasse {
   background-image: url(../assets/profiles/NoPerson_Square.png);
-  @include m.profileInfo();
+  @include m.profile__info();
 }
 
 .main__pic--sebastian {
   background-image: url(../assets/profiles/Sebastian_Square.png);
-  @include m.profileInfo();
+  @include m.profile__info();
 }
 
 .main__description {
@@ -115,4 +117,44 @@ main {
   background-color: lightgray;
   padding: 30px;
   border-radius: 5px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 65vh;
+  font-size: 1.5rem;
+  color: v.$primary-color;
+  background-color: black;
+
+  .footer__wrapper {
+    line-height: 50px;
+    margin-top: 30px;
+
+    .footer__adress,
+    .footer__contact,
+    .footer__socials {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+.footer__socials {
+  display: flex;
+  gap: 20px;
+}
+.socials__icons {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding-top: 8px;
+}
+
+.socials__name {
+  display: flex;
+  flex-direction: column;
+  line-height: 50px;
 }
