--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/*@mixin arrow {
+          ta bort??
+}*/
 @keyframes hidden {
   0% {
     background-color: white;
@@ -66,6 +69,11 @@ header {
   justify-content: flex-end;
   background-color: rgba(255, 255, 255, 0.1);
 }
+@media screen and (min-width: 768px) {
+  .hamb {
+    display: none;
+  }
+}
 .hamb-line {
   background-color: white;
   height: 4px;
@@ -100,6 +108,19 @@ header {
   list-style: none;
   visibility: hidden;
 }
+@media screen and (min-width: 768px) {
+  .nav__list {
+    visibility: visible;
+    flex-direction: row;
+    justify-content: flex-end;
+    background-color: rgba(255, 255, 255, 0.1);
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav__list__item {
+    margin: 20px 25px;
+  }
+}
 .nav__list a {
   text-decoration: none;
   color: white;
@@ -109,6 +130,11 @@ header {
 .nav__list a:active {
   text-decoration: underline;
 }
+@media screen and (min-width: 768px) {
+  .nav__list a:hover {
+    text-decoration: underline;
+  }
+}
 
 .side-menu:checked ~ nav .nav__list {
   visibility: visible;
@@ -117,13 +143,13 @@ header {
 
 .side-menu:checked ~ .hamb .hamb-line::before {
   animation: rotate-lower;
-  animation-duration: 0.3s;
+  animation-duration: 0.25s;
   animation-fill-mode: forwards;
 }
 
 .side-menu:checked ~ .hamb .hamb-line::after {
   animation: rotate-upper;
-  animation-duration: 0.3s;
+  animation-duration: 0.25s;
   animation-fill-mode: forwards;
 }
 
@@ -150,44 +176,68 @@ header {
   letter-spacing: 0.8px;
 }
 
-.arrow__container {
+.arrow--white {
   text-align: center;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: white;
 }
-.arrow__container #arrow--white {
-  font-size: 1.5rem;
-  width: 37px;
-  border-radius: 50%;
-  padding: 5px;
-  background-color: white;
+
+.arrow--black {
+  text-align: center;
+  font-size: 2rem;
   color: black;
   margin-bottom: 30px;
-}
-.arrow__container #arrow--black {
-  font-size: 1.5rem;
-  width: 37px;
-  border-radius: 50%;
-  padding: 5px;
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
-  margin-top: 20px;
 }
 
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+}
+
+.main__team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 40px;
+}
+@media screen and (min-width: 768px) {
+  .main__team {
+    width: 50%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 20px 80px;
+  }
+}
+
+.main__team__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+}
+@media screen and (min-width: 768px) {
+  .main__team__wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .main__title {
   margin-top: 20px;
   letter-spacing: 0.8px;
+  text-align: center;
 }
 
 .main__name {
   margin-top: 40px;
   margin-bottom: 20px;
   font-weight: bold;
+  text-align: center;
 }
 
 .main__pic--rakib {
@@ -231,31 +281,39 @@ main {
 }
 
 .main__description {
-  display: flex;
   margin-top: 20px;
   background-color: lightgray;
-  padding: 30px;
+  padding: 30px 40px;
   border-radius: 5px;
+}
+
+#quote {
+  font-size: 45px;
 }
 
 .footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  height: 65vh;
   font-size: 1.5rem;
   color: white;
   background-color: black;
-}
-.footer .footer__wrapper {
   line-height: 50px;
-  margin-top: 30px;
 }
-.footer .footer__wrapper .footer__adress,
-.footer .footer__wrapper .footer__contact,
-.footer .footer__wrapper .footer__socials {
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-around;
+    padding: 30px;
+  }
+}
+.footer .footer__adress,
+.footer .footer__contact,
+.footer .footer__socials {
+  margin: 20px;
+  width: 250px;
 }
 
 .footer__socials {
