--- a/scss/_startpage.scss
+++ b/scss/_startpage.scss
@@ -29,6 +29,10 @@ header {
   justify-content: flex-end;
   background-color: rgba($color: v.$primary-color, $alpha: 0.1);
 
+  @include m.tablet() {
+    display: none;
+  }
+
   &-line {
     background-color: v.$primary-color;
     height: 4px;
@@ -68,6 +72,19 @@ header {
   list-style: none;
   visibility: hidden;
 
+  @include m.tablet() {
+    visibility: visible;
+    flex-direction: row;
+    justify-content: flex-end;
+    background-color: rgba($color: v.$primary-color, $alpha: 0.1);
+  }
+
+  &__item {
+    @include m.tablet() {
+      margin: 20px 25px;
+    }
+  }
+
   & a {
     text-decoration: none;
     color: v.$primary-color;
@@ -76,6 +93,12 @@ header {
 
     &:active {
       text-decoration: underline;
+    }
+
+    &:hover {
+      @include m.tablet() {
+        text-decoration: underline;
+      }
     }
   }
 }
@@ -87,13 +110,13 @@ header {
 
 .side-menu:checked ~ .hamb .hamb-line::before {
   animation: rotate-lower;
-  animation-duration: 0.3s;
+  animation-duration: 0.25s;
   animation-fill-mode: forwards;
 }
 
 .side-menu:checked ~ .hamb .hamb-line::after {
   animation: rotate-upper;
-  animation-duration: 0.3s;
+  animation-duration: 0.25s;
   animation-fill-mode: forwards;
 }
 
@@ -122,44 +145,70 @@ header {
   }
 }
 
-.arrow__container {
+.arrow--white {
   text-align: center;
+  font-size: 2rem; //gör mixin
+  margin-bottom: 20px;
+  color: white;
+}
 
-  #arrow--white {
-    @include m.arrow;
-    background-color: v.$primary-color;
-    color: black;
-    margin-bottom: 30px;
-  }
-
-  #arrow--black {
-    @include m.arrow;
-    background-color: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
-    margin-top: 20px;
-  }
+.arrow--black {
+  text-align: center;
+  font-size: 2rem; //gör mixin
+  color: black;
+  margin-bottom: 30px;
 }
 
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+}
+
+.main__team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 40px;
+
+  @include m.tablet {
+    width: 50%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 20px 80px;
+  }
+}
+
+.main__team__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+
+  @include m.tablet {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .main__title {
   margin-top: 20px;
   letter-spacing: 0.8px;
+  text-align: center;
 }
 
 .main__name {
   margin-top: 40px;
   margin-bottom: 20px;
   font-weight: bold;
+  text-align: center;
 }
 
 .main__pic--rakib {
-  //gör media query
   background-image: url(../assets/profiles/Rakib_Square.png);
   @include m.profile__info();
 }
@@ -180,33 +229,39 @@ main {
 }
 
 .main__description {
-  display: flex;
   margin-top: 20px;
   background-color: lightgray;
-  padding: 30px;
+  padding: 30px 40px;
   border-radius: 5px;
+}
+
+#quote {
+  font-size: 45px;
 }
 
 .footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
-  height: 65vh;
   font-size: 1.5rem;
   color: v.$primary-color;
   background-color: black;
+  line-height: 50px;
 
-  .footer__wrapper {
-    line-height: 50px;
-    margin-top: 30px;
+  @include m.tablet {
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-around;
+    padding: 30px;
+  }
 
-    .footer__adress,
-    .footer__contact,
-    .footer__socials {
-      margin-bottom: 30px;
-    }
+  .footer__adress,
+  .footer__contact,
+  .footer__socials {
+    margin: 20px;
+    width: 250px;
   }
 }
 
@@ -214,6 +269,7 @@ main {
   display: flex;
   gap: 20px;
 }
+
 .socials__icons {
   display: flex;
   flex-direction: column;
